Fixed the wrapping of the swim componets

--- a/src/app/swim/swim.component.css
+++ b/src/app/swim/swim.component.css
@@ -1,10 +1,13 @@
 .container { 
     display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center;
 }
 
 .item { 
     padding-left: 5px;
     padding-right: 5px;
+    flex: 1 1 200px;
 }
 
 
