--- a/src/app/swimming-test/swimming-test.component.css
+++ b/src/app/swimming-test/swimming-test.component.css
@@ -1,8 +1,11 @@
 .container { 
     display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center;
 }
 
 .item { 
     padding-left: 5px;
     padding-right: 5px;
+    flex: 1 1 200px;
 }
